resources/assets/stylesheets/cbc/_footer.scss
footer {
  background-color: $brand-dark;
  color: $gray-lightest;

  h4 {
    margin: 30px 0;
    font-style: italic;
    a {
      color: $gray-lightest;
    }
  }

  section {
    padding: 20px;
  }

  a {
    color: $gray-lightest;
  }

  a:hover {
    color: $gray-lightest;
  }

  h3 {
    margin-top: 0px;
  }
}

.copyright {
  padding: 30px 15px 0px;
}

